Add Document encoding to header preloaded requests

When resources were preloaded using Link: headers, they weren't requested with
the document's charset, and therefore their decoding might have differed from non-preloaded resources.
This CL fixes that by requesting them with the right encoding.

BUG=615307

Review-Url: https://codereview.chromium.org/2019303002
Cr-Commit-Position: refs/heads/master@{#396735}

Former-commit-id: 727d4183ad164bd4eaa4bde1c82eadb592e1c41c